[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/TitleBackground.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Other/Font.tres" type="BitmapFont" id=2]
[ext_resource path="res://Scripts/Title.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "titlemove"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 70, 150 ), Vector2( 70, 140 ), Vector2( 70, 150 ), Vector2( 70, 160 ), Vector2( 70, 150 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -903.634, -42.9555 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 729.0
margin_bottom = 721.0
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 70.0
margin_top = 150.0
margin_right = 214.0
margin_bottom = 183.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 2 )
text = "THE



WILD



JAMKAY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/titlemove = SubResource( 1 )

[node name="ButtonHowToPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 20.0
margin_right = 114.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
text = "HOW TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSingleplayer" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 88.941
margin_right = 114.0
margin_bottom = 138.941
custom_fonts/font = ExtResource( 2 )
text = "SINGLEPLAYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCredits" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 230.0
margin_right = 114.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCoop" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 160.0
margin_right = 114.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 2 )
text = "COOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="."]
margin_left = 202.25
margin_top = 100.036
margin_right = 394.25
margin_bottom = 137.036
custom_fonts/font = ExtResource( 2 )
text = "BY EMMA FM



MADE FOR 




MIZJAM 1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonHowToPlay" to="." method="_on_ButtonHowToPlay_pressed"]
[connection signal="pressed" from="ButtonSingleplayer" to="." method="_on_ButtonSingleplayer_pressed"]
[connection signal="pressed" from="ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
[connection signal="pressed" from="ButtonCoop" to="." method="_on_ButtonCoop_pressed"]
